feat(wordpress): update version to 3.2.0-beta1

--- a/charts/wordpress/samples/advanced.secrets.yaml
+++ b/charts/wordpress/samples/advanced.secrets.yaml
@@ -8,9 +8,9 @@ stringData:
   wordpress.email: johndoe@example.com
   mariadb-root-password: S3cureDBP@ss
   mariadb-password: Sup3rS3cureP@ss
+  # WP_HOME and WP_SITEURL are automatically injected by configExtraInject (default: true)
+  # using the wordpress.url value. No need to define them here.
   wordpress.configExtra: |-
-    define('WP_HOME', 'https://example.com');
-    define('WP_SITEURL', 'https://example.com');
     define('WP_MEMORY_LIMIT', '256M');
     define('WP_MAX_MEMORY_LIMIT', '512M');
     define('FORCE_SSL_ADMIN', false);
