--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -9,15 +9,34 @@ metadata:
 type: Opaque
 data:
   WORDPRESS_TABLE_PREFIX: {{ .Values.wordpress.tablePrefix | b64enc }}
-  {{- if and .Values.wordpress.configExtra (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
-  {{- $configextra := .Values.wordpress.configExtra }}
-  {{- $url := .Values.wordpress.url }}
-  {{/* If memcached is enabled and createconfig is true, append PHP memcached servers array */}}
-  {{- $memcfg := "" }}
+  {{- if .Values.wordpress.configExtraInject }}
+  {{/* Build inject string: WP_HOME, WP_SITEURL, memcached config */}}
+  {{- $inject := "" }}
+  {{- $url := include "wordpress.normalizedUrl" . }}
+  {{/* Always inject WP_HOME and WP_SITEURL (URL is auto-prefixed with http/https if no protocol given) */}}
+  {{- $inject = printf "define('WP_HOME', '%s');define('WP_SITEURL', '%s');" $url $url }}
+  {{/* Multisite constants (WP_ALLOW_MULTISITE, MULTISITE, SUBDOMAIN_INSTALL, DOMAIN_CURRENT_SITE, etc.) */}}
+  {{/* are NOT injected here. They are written directly into wp-config.php by 'wp core multisite-convert' */}}
+  {{/* in the init container and persist on the PVC. Injecting them here would cause PHP warnings */}}
+  {{/* about already-defined constants. */}}
+  {{/* Add memcached config when enabled */}}
   {{- if and .Values.memcached.enabled .Values.memcached.createconfig }}
-  {{- $memcfg = printf "$memcached_servers = array('default' => array('%s:%v'));\n" (include "wordpress.memcached.fullname" .) (.Values.memcached.service.port) }}
+  {{- $memcfg := printf "$memcached_servers = array('default' => array('%s:%v'));\n" (include "wordpress.memcached.fullname" .) (.Values.memcached.service.port) }}
+  {{- $inject = printf "%s%s" $inject $memcfg }}
   {{- end }}
-  WORDPRESS_CONFIG_EXTRA: {{ printf "%s;define('WP_HOME', '%s');define('WP_SITEURL', '%s');%s" $configextra $url $url $memcfg | b64enc }}
+  {{- if and (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
+  {{/* No external source: combine user configExtra (if any) + inject into WORDPRESS_CONFIG_EXTRA */}}
+  {{- $combined := printf "%s%s" (.Values.wordpress.configExtra | default "") $inject }}
+  WORDPRESS_CONFIG_EXTRA: {{ $combined | b64enc }}
+  {{- else }}
+  {{/* External source provides user config: store inject separately for K8s $(VAR) interpolation in deployment.yaml */}}
+  _WP_CONFIG_INJECT: {{ $inject | b64enc }}
+  {{- end }}
+  {{- else }}
+  {{/* configExtraInject disabled: only include configExtra if set and no external source */}}
+  {{- if and .Values.wordpress.configExtra (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
+  WORDPRESS_CONFIG_EXTRA: {{ .Values.wordpress.configExtra | b64enc }}
+  {{- end }}
   {{- end }}
   {{- if .Values.mariadb.enabled }}
   {{- $host := include "wordpress.mariadb.fullname" . }}
