--- a/charts/wordpress/samples/advanced.values.yaml
+++ b/charts/wordpress/samples/advanced.values.yaml
@@ -33,6 +33,7 @@ wordpress:
       activate: false
       autoupdate: true
     - name: "https://creativethemes.com/downloads/blocksy-child.zip"
+      slug: "blocksy-child" # Required for URL themes: enables autoupdate, sites[] and skip-if-installed
       activate: true
       autoupdate: true
   users:
@@ -46,7 +47,7 @@ wordpress:
   configExtraSecret:
     name: "wordpress-test-secret"
   htaccessConfigMap: "wordpress-custom-config"
-  url: "https://example.com"
+  url: "http://192.168.178.31:30111"
 service:
   nodePorts:
     http: 30111
