fix: allow github-actions[bot] in renovate and parse Unicode arrows in metadata script

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,9 @@
     "extends": [
         "config:recommended"
     ],
+    "gitIgnoredAuthors": [
+        "github-actions[bot]@users.noreply.github.com"
+    ],
     "platformAutomerge": true,
     "semanticCommits": "disabled",
     "enabledManagers": [
