feat(wordpress): update version to 3.4.0-beta1

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 3.3.1
+version: 3.4.0-beta1
 appVersion: "6.9.1" # renovate: image=docker.io/wordpress
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,16 +26,20 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
+    - kind: fixed
+      description: "Providing now full memcached functionality."
+    - kind: fixed
+      description: "Init script: Blog title (blogname) update is fixed and now reliably applied via wp option update."
     - kind: changed
-      description: "Update docker.io/mariadb to b1cb255"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/137
+      description: "Memcached: Automatically inject guarded WP_CACHE define when memcached config is enabled."
+    - kind: added
+      description: "Memcached: Add WP_CACHE_KEY_SALT support with precedence: explicit value, existing Secret reference, persisted generated value."
+    - kind: added
+      description: "Memcached: Add memcached.serverGroups for cache-group-specific backend mapping; fallback remains embedded memcached service."
     - kind: changed
-      description: "Update mariadb to 0.14.1"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/137
+      description: "Memcached: Harden memcached runtime setup via extension bootstrap init container (memcache + memcached) and staged shared libraries."
+    - kind: changed
+      description: "Memcached: Enforce memcached plugin drop-in mode (object-cache.php) and avoid normal activation conflicts in init workflow."
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.9.1-php8.3-apache
