--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -20,8 +20,49 @@ data:
   {{/* in the init container and persist on the PVC. Injecting them here would cause PHP warnings */}}
   {{/* about already-defined constants. */}}
   {{/* Add memcached config when enabled */}}
-  {{- if and .Values.memcached.enabled .Values.memcached.createconfig }}
-  {{- $memcfg := printf "$memcached_servers = array('default' => array('%s:%v'));\n" (include "wordpress.memcached.fullname" .) (.Values.memcached.service.port) }}
+  {{- $memcachedCreateConfig := .Values.memcached.createConfig }}
+  {{- if hasKey .Values.memcached "createconfig" }}
+  {{- $memcachedCreateConfig = .Values.memcached.createconfig }}
+  {{- end }}
+  {{- if and .Values.memcached.enabled $memcachedCreateConfig }}
+  {{- $inject = printf "%sif (!defined('WP_CACHE')) { define('WP_CACHE', true); }" $inject }}
+  {{- $cacheKeySalt := .Values.memcached.cacheKeySalt | default "" }}
+  {{- if and (eq $cacheKeySalt "") .Values.memcached.cacheKeySaltSecret.name }}
+  {{- $cacheKeySaltSecret := lookup "v1" "Secret" .Release.Namespace .Values.memcached.cacheKeySaltSecret.name }}
+  {{- if not $cacheKeySaltSecret }}
+  {{- fail (printf "memcached.cacheKeySaltSecret.name '%s' not found in namespace '%s'" .Values.memcached.cacheKeySaltSecret.name .Release.Namespace) }}
+  {{- end }}
+  {{- $cacheKeySaltKey := .Values.memcached.cacheKeySaltSecret.key | default "WP_CACHE_KEY_SALT" }}
+  {{- if not (hasKey $cacheKeySaltSecret.data $cacheKeySaltKey) }}
+  {{- fail (printf "memcached.cacheKeySaltSecret.key '%s' not found in secret '%s'" $cacheKeySaltKey .Values.memcached.cacheKeySaltSecret.name) }}
+  {{- end }}
+  {{- $cacheKeySalt = (index $cacheKeySaltSecret.data $cacheKeySaltKey | b64dec) }}
+  {{- end }}
+  {{- if eq $cacheKeySalt "" }}
+  {{- $existingSecret := lookup "v1" "Secret" .Release.Namespace (include "wordpress.fullname" .) }}
+  {{- if and $existingSecret (hasKey $existingSecret.data "WORDPRESS_CACHE_KEY_SALT") }}
+  {{- $cacheKeySalt = (index $existingSecret.data "WORDPRESS_CACHE_KEY_SALT" | b64dec) }}
+  {{- else }}
+  {{- $cacheKeySalt = randAlphaNum 48 }}
+  {{- end }}
+  {{- end }}
+  WORDPRESS_CACHE_KEY_SALT: {{ $cacheKeySalt | b64enc }}
+  {{- $inject = printf "%sdefine('WP_CACHE_KEY_SALT', '%s');" $inject (replace "'" "\\'" $cacheKeySalt) }}
+  {{- $memcachedServerGroups := .Values.memcached.serverGroups | default dict }}
+  {{- $memcfg := "" }}
+  {{- if gt (len $memcachedServerGroups) 0 }}
+  {{- $groupEntries := list }}
+  {{- range $groupName, $groupServers := $memcachedServerGroups }}
+  {{- $serverEntries := list }}
+  {{- range $groupServers }}
+  {{- $serverEntries = append $serverEntries (printf "'%s'" .) }}
+  {{- end }}
+  {{- $groupEntries = append $groupEntries (printf "'%s' => array(%s)" $groupName (join ", " $serverEntries)) }}
+  {{- end }}
+  {{- $memcfg = printf "$memcached_servers = array(%s);\n" (join ", " $groupEntries) }}
+  {{- else }}
+  {{- $memcfg = printf "$memcached_servers = array('default' => array('%s:%v'));\n" (include "wordpress.memcached.fullname" .) (.Values.memcached.service.port) }}
+  {{- end }}
   {{- $inject = printf "%s%s" $inject $memcfg }}
   {{- end }}
   {{- if and (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
